# toy_blog

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  noxfile.py  pyproject.toml  requirements.txt
domain/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
domain/fixtures/: articles.json  writers.json
domain/migrations/: 0001_added_writer_and_article_model.py
main/: settings.py  urls.py
