[tool.poetry]
name = "toy-blog"
version = "0.1.0"
description = "A simple Blog App with Django"
authors = ["Stefan Cosic <stefan22bl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
